# api/http/handler.go
@@ -44,7 +44,7 @@ func (h *locationHandler) GetAddressByID(w http.ResponseWriter, r *http.Request)
 // @ID get-addresses-by-string
 // @Produce json
 // @Param q query string true "Address ID"
-// @Success 200 {object} domain.AutocompletePrediction
+// @Success 200 {array} domain.AutocompletePrediction
 // @Failure 404 {string} string "Please input a valid string"
 // @Router /api/v1/address/predict [get]
 func (h *locationHandler) GetAddressSuggestionsByText(w http.ResponseWriter, r *http.Request) {
