# docs/swagger.json
@@ -33,7 +33,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/domain.AutocompletePrediction"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/domain.AutocompletePrediction"
+                            }
                         }
                     },
                     "404": {
